# cellsem-agent

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
cellsem_agent/: cli.py  file_utils.py  foo.py
cellsem_agent/agents/annotator/: annotator_agent.py  annotator_config.py  annotator_gradio.py
cellsem_agent/agents/cell/: cell_agent.py  cell_config.py  cell_gradio.py  cell_tools.py
cellsem_agent/agents/paper_celltype/: paper_celltype_agent.py  paper_celltype_config.py  paper_celltype_gradio.py  paper_celltype_tools.py
cellsem_agent/graphs/: cl_validation_graph.py
cellsem_agent/graphs/cl_validation/: cl_validation_graph.mmd  cl_validation_graph.py
cellsem_agent/graphs/cxg_annotate/: cxg_annotate_graph.mmd  cxg_annotate_graph.py
data/: annotations.tsv
docs/: example_prompts.md  index.md  modules.md
tests/: test_annotator.py  test_foo.py
tests/statistics/: statistic_utils.py  statistics.py
tests/test_data/: False_assertions_curators_error.tsv  LLM_False_assertions.tsv  Sources.md  cell_type_validation_report.tsv  cell_type_validation_report_aggregated.tsv  cell_type_validation_report_test.tsv
tests/test_data/cell_mappings_input/Bipolar_cells/: Bipolar cells of the human fovea and peripheral retina.csv  Bipolar cells of the human fovea and peripheral retina.json  cache.json  cell_type_annotations.tsv
tests/test_data/cell_mappings_input/Human Skin fibroblast/: Single-cell transcriptomes of the human skin reveal age-related loss of fibroblast priming.csv  Single-cell transcriptomes of the human skin reveal age-related loss of fibroblast priming.json  cache.json  cell_type_annotations.tsv
tests/test_data/cell_mappings_input/Trabecular Meshwork and Corneal Scleral wedge/: cache.json  cell_type_annotations.tsv  tranbecular_meshwork_and_corneal_scleral_wedge.csv  tranbecular_meshwork_and_corneal_scleral_wedge.json
tests/test_data/cell_mappings_input/gut/: cache.json  cell_type_annotations.tsv  healthy_adult_human_small_intestine_and_colon_epithelium.csv  healthy_adult_human_small_intestine_and_colon_epithelium.json
(+4 files in other folders)
