[tool.poetry]
name = "cellsem_agent"
version = "0.0.1"
description = "This is a template repository for Python projects that use Poetry for their dependency management."
authors = ["CellularSemantics <fpgmaas@gmail.com>"]
repository = "https://github.com/Cellular-Semantics/cellsem-agent"
documentation = "https://Cellular-Semantics.github.io/cellsem-agent/"
readme = "README.md"
packages = [
  {include = "cellsem_agent"}
]

[tool.poetry.scripts]
cellsem-agent = "cellsem_agent.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
click = "^8.2.1"
aurelian = {git = "https://github.com/monarch-initiative/aurelian.git"}
gradio = "^5.23.3"
pydantic-ai = ">=0.2.0"
logfire = ">=3.5.3"
fastobo = ">=0.12.3"
oaklib = ">=0.6.21"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["cellsem_agent"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.poetry.extras]
gradio = ["gradio"]



[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
